# CG-CourseWorks

./: .gitignore  README.md
CourseWork2/: CMakeLists.txt  README.md  main.cpp
CourseWork2/include/: Curve.hpp  CusMath.h  GLUTCallback.hpp
CourseWork2/src/: Curve.cpp  CusMath.c  GLUTCallback.cpp
CourseWork2/src/stb_image/: stb_image.cpp
CourseWork3/: CMakeLists.txt  README.md
CourseWork3/include/: Button.hpp  CusMath.hpp  GLUTCallback.hpp  PolygonScanConversion.hpp
CourseWork3/src/: Button.cpp  GLUTCallback.cpp  LineGeneration.cpp  PolygonScanConversion.cpp
CourseWork4/: CMakeLists.txt  README.md  main.cpp
CourseWork4/include/: Button.hpp  CusMath.hpp  GLUTCallback.hpp  PolygonScanConversion.hpp
CourseWork4/src/: CusMath.cpp  GLUTCallback.cpp  LineGeneration.cpp
Test2/: CMakeLists.txt  README.md  main.cpp
Test2/include/: Button.hpp  CircleGenerator.hpp  CurveSurfaceGenerator.hpp  CusMath.hpp  GLUTCallback.hpp  LineGeneration.hpp  PolygonScanConversion.hpp
Test2/src/: Button.cpp  CircleGenerator.cpp  CurveSurfaceGenerator.cpp  GLUTCallback.cpp
